--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -37,7 +37,7 @@
                     android:id="@+id/etCurrentPin"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/current_login_pin"
+                    android:hint="Current Transcational Pin"
                     android:inputType="numberSigned"
                     android:maxLength="6"
                     android:maxLines="1"
