--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths >
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
     <files-path name="l_pesa" path="images/"/>
+    <external-path name="external_files" path="."/>
 </paths>
 <!--<paths>
     <external-path
