--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -79,6 +79,7 @@
                                   android:layout_centerInParent="true"
                                   app:srcCompat="@drawable/ic_my_fixed_deposit"
                                   android:scaleType="fitXY"
+                                  android:layout_margin="@dimen/_5sdp"
                                   android:adjustViewBounds="true"
 
                                   />
@@ -122,6 +123,7 @@
                                   android:contentDescription="@string/app_name"
                                   android:layout_width="@dimen/_23sdp"
                                   android:layout_height="@dimen/_23sdp"
+                                  android:layout_margin="@dimen/_5sdp"
                                   app:srcCompat="@drawable/ic_my_savings_account"
                                   android:layout_centerInParent="true"
                                   android:scaleType="fitXY"
