--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -156,8 +156,8 @@
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_marginTop="@dimen/_7sdp"
                   android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_weight="0"
+                  android:layout_height="match_parent"
+                  android:layout_weight="2"
                   android:background="@color/semi_white"
                   android:orientation="horizontal"
                   >
@@ -233,23 +233,25 @@
                   </RelativeLayout>
 
               </LinearLayout>
+
               <LinearLayout
                   android:id="@+id/ll_banner"
-                  android:layout_marginEnd="@dimen/_10sdp"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight="1"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_marginTop="@dimen/_7sdp"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_weight="0"
+                  android:layout_marginEnd="@dimen/_10sdp"
                   android:background="@color/semi_white"
                   android:orientation="horizontal">
 
                   <ImageView
-                      android:contentDescription="@string/app_name"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:background="@drawable/add_banner"
-                      />
+                      android:scaleType="centerInside"
+
+                      android:src="@drawable/add_banner"
+                      android:contentDescription="@string/app_name" />
 
 
               </LinearLayout>
