--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -29,7 +29,7 @@
                 android:layout_marginBottom="@dimen/_12sdp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/earn_credit_coins"
-                android:textColor="@color/colorBlack"
+                android:textColor="@color/dark_text_color"
                 android:textSize="@dimen/_15sdp"
                 android:textStyle="bold" />
 
