--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/txtCountry"
                 android:visibility="invisible"
                 android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_75sdp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:singleLine="true"
                 android:ellipsize="middle"
