--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/l_pesa_risk_free"
-        android:textColor="@color/colorWhite"
+        android:textColor="#fff"
         android:textSize="@dimen/_15sdp"
         android:gravity="center"
         android:padding="@dimen/_2sdp"
@@ -138,7 +138,7 @@
         android:fontFamily="@font/montserrat"
         android:gravity="center|bottom"
         android:text="@string/privacy_term_condition"
-        android:textColor="@color/colorWhite"
+        android:textColor="#fff"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
         app:layout_constraintBottom_toBottomOf="parent"
