--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -48,7 +48,7 @@
             android:fontFamily="@font/montserrat"
             android:maxLines="1"
             android:text="@string/credit_score"
-            android:textColor="?android:textColorPrimary"
+            android:textColor="#fff"
             android:textSize="@dimen/_11sdp" />
 
     </RelativeLayout>
