--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -11,11 +11,8 @@
         <item name="android:windowDisablePreview">true</item>
 
     </style>
-    <style name="NavigationTheme" parent="AppTheme">
-        <item name="listPreferredItemHeightSmall">@dimen/_45sdp</item>
-    </style>
     <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
-    <item name="android:textColor">#A3EDFF</item>
+    <item name="android:textColor">@color/colorMenuTab</item>
     <item name="android:textSize">@dimen/_12sdp</item>
     </style>
 </resources>
