1. all dependency library updated. 2. App theme properly changed. 3. bug fixed and stability improved

--- a/app/src/main/res/layout/content_profile_edit_business_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_business_info.xml
@@ -139,7 +139,7 @@
                 android:id="@+id/buttonSubmit"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_27sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_13sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
@@ -148,7 +148,7 @@
                 android:textStyle="bold"
                 android:text="@string/submit"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="#fff"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -159,7 +159,7 @@
                 android:id="@+id/buttonCancel"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_27sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_13sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/bg_grey_view"
@@ -167,7 +167,7 @@
                 android:textStyle="bold"
                 android:textAllCaps="true"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorGreyDeep"
+                android:textColor="#fff"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
