--- a/app/src/main/res/layout/content_set_up_pin.xml
+++ b/app/src/main/res/layout/content_set_up_pin.xml
@@ -90,14 +90,14 @@
                 <Button
                     android:id="@+id/buttonSubmit"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/_27sdp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/ripple_green_button"
                     android:text="@string/submit"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/buttonTextColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -107,12 +107,12 @@
                 <Button
                     android:id="@+id/buttonCancel"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/_27sdp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:background="@drawable/bg_grey_view"
                     android:text="@string/cancel"
                     android:textAllCaps="true"
-                    android:textColor="@color/light_text_color"
+                    android:textColor="@color/buttonTextColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
