--- a/app/src/main/res/drawable/empty_dot.xml
+++ b/app/src/main/res/drawable/empty_dot.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
-        android:color="@color/colorPrimary"
+        android:color="@color/colorApp"
         android:width="@dimen/_1sdp"/>
 </shape>
