--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -120,14 +120,14 @@
             <Button
                 android:id="@+id/buttonSubmit"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_27sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_30sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/ripple_green_button"
                 android:text="@string/submit"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#fff"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -137,12 +137,12 @@
             <Button
                 android:id="@+id/buttonCancel"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_27sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_grey_view"
                 android:text="@string/cancel"
                 android:textAllCaps="true"
-                android:textColor="@color/colorGreyDeep"
+                android:textColor="#fff"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
