--- a/app/src/main/res/layout/fragment_token_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_token_withdrawal.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout">
 
     <androidx.cardview.widget.CardView
@@ -38,6 +38,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
                 android:textAlignment="center"
+                tools:text="0 LPK"
                 android:textColor="@color/total_lpk_color"
                 android:textSize="@dimen/_18sdp"
                 app:layout_constraintBottom_toTopOf="@+id/txtLockedVal"
@@ -55,6 +56,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/colorSemiBlack"
                 android:textSize="@dimen/_12sdp"
+                tools:text="0 LPK is in Deposit"
                 app:layout_constraintBottom_toTopOf="@+id/commonInputLayout3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -106,7 +108,7 @@
             <Button
                 android:id="@+id/buttonSubmit"
                 android:layout_width="@dimen/_130sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginBottom="@dimen/_22sdp"
                 android:background="@drawable/ripple_green_button"
@@ -114,7 +116,7 @@
                 android:text="@string/submit"
                 android:textAllCaps="true"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/buttonTextColor"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
