--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:windowDisablePreview">true</item>
 
     </style>
-    <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
+    <style name="NavDrawerTextStyle" parent="AppTheme">
     <item name="android:textColor">@color/colorMenuTab</item>
     <item name="android:textSize">@dimen/_12sdp</item>
     </style>
