--- a/app/src/main/res/layout/fragment_all_services.xml
+++ b/app/src/main/res/layout/fragment_all_services.xml
@@ -6,8 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".allservices.AllServicesFragment">
 
+    <com.app.l_pesa.common.CommonTextRegular
+        android:id="@+id/tvNoService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="@dimen/_14sdp"
+        android:text="No third-party \nservices available in your country"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <androidx.cardview.widget.CardView
         android:id="@+id/cvSasaDoctor"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardElevation="@dimen/_5sdp"
@@ -22,10 +35,10 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imgLogo"
                 android:layout_margin="@dimen/_5sdp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_delivery_box" />
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp" />
             <com.app.l_pesa.common.CommonTextRegular
                 android:text="Sasa Doctor"
                 android:layout_margin="@dimen/_5sdp"
