sasa doctor UI for user link done

--- a/app/src/main/res/layout/fragment_all_services.xml
+++ b/app/src/main/res/layout/fragment_all_services.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".allservices.AllServicesFragment">
+    tools:context=".allservices.views.AllServicesFragment">
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/tvNoService"
