location service implemented

--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -48,7 +48,7 @@
                 android:gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:inputType="numberSigned"
-                android:textColor="@color/colorBlack"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="@dimen/_14sdp"
                 android:cursorVisible="true"
                 android:focusable="true"
@@ -79,7 +79,7 @@
                 android:gravity="center"
                 android:padding="@dimen/_2sdp"
                 android:text="@string/resend_verification"
-                android:textColor="@color/colorAppDeep"
+                android:textColor="@color/colorApp"
                 android:textSize="@dimen/_12sdp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
