--- a/app/src/main/res/layout/activity_sasa_doctor.xml
+++ b/app/src/main/res/layout/activity_sasa_doctor.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clSasaLink"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <ImageView
@@ -134,35 +134,32 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="DOB"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/guideline3"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvNameKey" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvNameValue" />
 
                 <com.app.l_pesa.common.CommonTextRegular
                     android:id="@+id/tvNameKey3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="Sex"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/guideline3"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvNameKey2" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvDobValue" />
 
                 <com.app.l_pesa.common.CommonTextRegular
                     android:id="@+id/tvNameKey4"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:text="Merital status"
@@ -171,7 +168,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/guideline3"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvNameKey3"
+                    app:layout_constraintTop_toBottomOf="@+id/tvSexValue"
                     app:layout_constraintVertical_bias="0.0" />
 
                 <com.app.l_pesa.common.CommonTextRegular
